# python-cdp

./: .coveragerc  .gitmodules  .pre-commit-config.yaml  404.html  README.md  auto_doc_generator.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test_and_coverage.yml  upstream_tracker.yml
changelog/: 13.bugfix  6.feature  7.feature  changelog.rst
docs/: getting_started.md  index.md
docs/reference/: SUMMARY.md
docs/reference/cdp/: accessibility.md  animation.md  audits.md  background_service.md  browser.md  cache_storage.md  cast.md  console.md  css.md  database.md  debugger.md  device_access.md  device_orientation.md  dom.md  dom_debugger.md  dom_snapshot.md  dom_storage.md  emulation.md  event_breakpoints.md  fed_cm.md  fetch.md  headless_experimental.md  heap_profiler.md  index.md  indexed_db.md  input.md  inspector.md  io.md  layer_tree.md  log.md  media.md  memory.md  network.md  overlay.md  page.md  performance.md  performance_timeline.md  preload.md  profiler.md  runtime.md  (+11 more)
docs/reference/client/: client.md
generation/: index.html
getting_started/: index.html
python_cdp/: _commandline.py  _const.py  _headers.py  _models.py  _protocols.py  _templates.py  _types.py  _utils.py  generate.py  generator.py  utils.py
python_cdp/cdp/: __init__.py  accessibility.py  animation.py  audits.py  autofill.py  background_service.py  browser.py  cache_storage.py  cast.py  console.py  css.py  database.py  debugger.py  device_access.py  device_orientation.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  emulation.py  event_breakpoints.py  fed_cm.py  fetch.py  headless_experimental.py  heap_profiler.py  indexed_db.py  input.py  inspector.py  io.py  layer_tree.py  log.py  media.py  memory.py  network.py  overlay.py  page.py  performance.py  performance_timeline.py  preload.py  profiler.py  (+12 more)
python_cdp/client/: client.py
reference/SUMMARY/: index.html
reference/cdp/: index.html
reference/cdp/accessibility/: index.html
reference/cdp/animation/: index.html
reference/cdp/audits/: index.html
reference/cdp/background_service/: index.html
reference/cdp/browser/: index.html
reference/cdp/cache_storage/: index.html
reference/cdp/cast/: index.html
reference/cdp/console/: index.html
reference/cdp/css/: index.html
reference/cdp/database/: index.html
reference/cdp/debugger/: index.html
reference/cdp/device_access/: index.html
reference/cdp/device_orientation/: index.html
reference/cdp/dom/: index.html
reference/cdp/dom_debugger/: index.html
reference/cdp/dom_snapshot/: index.html
reference/cdp/dom_storage/: index.html
reference/cdp/emulation/: index.html
reference/cdp/event_breakpoints/: index.html
reference/cdp/fed_cm/: index.html
reference/cdp/fetch/: index.html
reference/cdp/headless_experimental/: index.html
reference/client/: index.html
scripts/: dependencies.py  regenerate.py  update_submodule.py
search/: search_index.json
tests/: test_parsing_protocols.py  test_util.py
(+28 files in other folders)
