[tool.poetry]
name = "python-cdp"
version = "0.1.0"
description = "Python library for interacting with the chrome devtools protocol"
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"
packages = [{include = "python_cdp"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
