[tool.poetry]
name = "python-cdp"
version = "0.1.0"
description = "Python library for interacting with the chrome devtools protocol"
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"
packages = [{include = "python_cdp"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tox = "^4.4.5"
pre-commit = "^3.0.4"
codecov = "^2.1.12"
coverage = "^7.1.0"
towncrier = "^22.12.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
