[tool.poetry]
name = "python-cdp"
version = "0.3.0"
description = "Python library for interacting with the chrome devtools protocol"
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"
packages = [{include = "python_cdp"}]

[tool.poetry.dependencies]
python = "^3.9"
websockets = ">=10.4,<12.0"
loguru = ">=0.6,<0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tox = "^4.4.5"
pre-commit = "^3.0.4"
codecov = "^2.1.12"
coverage = "^7.1.0"
towncrier = "^22.12.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mkdocstrings = {extras = ["python"], version = ">=0.20,<0.22"}
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
ipython = "^8.11.0"
ipdb = "^0.13.13"
stringcase = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:RequestsDependencyWarning:"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_single_line = true
known_first_party = "python_cdp/"
default_section = 'THIRDPARTY'
forced_separate = 'tests'

[tool.mypy]
mypy_path = "python_cdp/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false
ignore_errors = false

[tool.black]
target-version = ['py39']
line-length = 120

[tool.docformatter]
recursive = true
wrap-summaries = 120
blank = true


[tool.towncrier]
directory = "changelog/"
filename = "changelog/changelog.rst"
package = "python_cdp"
title_format = "{name} {version} ({project_date})"


